# EDGAR-DOC-PARSER

./: .buildinfo  .gitignore  .pre-commit-config.yaml  8k_parser_test.py  Data Extraction.ipynb  IBM_Newsapi_2022-09-25.json  IBM_Newscatcher_2022-09-25.json  LICENSE  LICENSE.md  README.md  api_keys.yaml  core.html  dataloader.html  document_type.html  downloader.html  example.csv  genindex.html  index.html  metadata.html  objects.inv  parser.html  popular_labels.txt  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.html  stop_word.npy  tickers.txt
.github/workflows/: docs_pages_workflow.yml  flake8.yaml
EDGAR/: __init__.py  data_subset.py  dataloader.py  dataloader_neal.py  download_data.py  downloader.py  embedder.py  has_annotation.py  metadata_manager.py  parser-mix.py  parser.py  parser2022.py  preprocesser.py  process_nflx.py  sample.csv  table_parser.py  test.py  test_neal.py  test_text_by_page.py
EDGAR/ParserFilter/: ParserFilter.py  example.ipynb  tag_list.txt
_sources/: core.rst.txt  document_type.rst.txt
docs/: buildDocs.sh  conf.py  core.rst  dataloader.rst  document_type.rst  downloader.rst  genindex.html  index.html  index.rst  metadata.rst  metadata_mgr.rst  objects.inv  parser.rst  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.rst
example/: 8k_item_parser.ipynb  label_documents.ipynb  parse_8k.py  preprocess_all.py
examples/: 8_K.py  annotate.py  feature_tester.py  figures.ipynb  find_ims_documents.py  generate_label_summary.py  generate_subset.py  not_implemented_error.py  parse_annotated_tables_test.py  parser_test.py  parser_visual_test.py  process_nflx.py  sample.csv  test_text_by_page.py
govinfo_parser/: example2.csv  govinfo_parser.ipynb
models/: automodel.py  preprocess.py  preprocess2.py  preprocess_all.py
parsers/: api_keys.yaml  tickers.txt
parsers/EDGAR/: README.sh  data.json  dataloader.py  env_summary.yaml  parser.py  parser2.py  parser2022.ipynb  parser4.py  sec-edgar.py  table_parser.py
parsers/parser-amber/: GNews.py  Newsapi.py  Newscatcher.py  config.py
parsers/parser-neal/: govinfo_parser.ipynb
parsers/yahoo_fin/: yahoo_parser.py
report/source/: main.tex
setup/: automodel.py  download_data.py  environment.yml  generate_dataset.py  generate_dataset_nflx.py  generate_tokenizer.py  hf_train.py  preprocess.py  pyproject.toml  train.py
src/: Untitled.ipynb
src/EDGAR/: __init__.py  document.py  downloader.py  html.py  metadata_manager.py  parser.py  pipeline.py  wrappers.py
src/edgar/: __init__.py  dataloader.py  document.py  downloader.py  html.py  metadata_manager.py  parser.py  pipeline.py  subheader-parser-8k.py  subheader_parser_8k.py  wrappers.py
src/edgar2/: parser.py
