[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "edgar_doc_parser"
version = "0.2.2"
authors = [
  { name="Kamil Krukowski", email="Kamil.Krukowski@tufts.edu" },
  { name="Yiting Li"},
  { name="Nachuan Zhao"},
  { name="Kelsey Yew" },
]

maintainers = [
  { name="Kamil Krukowski", email="Kamil.Krukowski@tufts.edu" },
]
description = "Download, extraction, and parsing of documents available through the Securities and Trade Commission's EDGAR database"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "secedgar == 0.4.0",
  "pyyaml == 6.0",
  "numpy == 1.24.1",
  "pandas == 1.5.3",
]

[project.urls]
"Homepage" = "https://github.com/kamilkrukowski/EDGAR-DOC-PARSER"
"Bug Tracker" = "https://github.com/kamilkrukowski/EDGAR-DOC-PARSER/issues"
